# OCR_P10

./: .gitignore  db.sqlite3  pyproject.toml
project_manager/: admin.py  models.py  pagination.py  permissions.py  serializers.py  views.py
softdesk_project/: settings.py  urls.py
user_auth/: models.py  serializers.py  views.py
